fix z-index error

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,6 +11,7 @@
 }
 .app-header {
   position: fixed;
+  z-index: 1;
   top: 0;
   height: 140px;
   width: 100%;
